--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -22,6 +22,7 @@ body {
     text-align:center;
     background:rgba(255,255,255,.98);
     box-shadow: 1px 1px 4px black;
+    max-width:1450px;
   }
 
 hr {
