splitting stylesheet for modularity

--- a/assets/styles/flexStyle.css
+++ b/assets/styles/flexStyle.css
@@ -21,6 +21,15 @@
     flex-wrap:wrap;
 }
 
+.flexRowBetween {
+    width:auto;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap:wrap;
+}
+
 .flexRowCenter {
     display:flex;
     flex-direction: row;
