--- a/assets/styles/defaultStyle.css
+++ b/assets/styles/defaultStyle.css
@@ -1,6 +1,6 @@
 .fa-icon {
     width: auto;
-    height: 1em; 
+    height: 6vw; 
     max-width: 100%;
     max-height: 100%;
   }
@@ -16,6 +16,7 @@ body {
     background-attachment:fixed;
     background-repeat: no-repeat;
     min-height:100vh;
+    min-width:100%;
     margin:0;
     overflow-x:hidden;
     padding: 0px 0px 0 0;
