--- a/assets/styles/transitions.css
+++ b/assets/styles/transitions.css
@@ -6,6 +6,15 @@
   opacity: 0;
 }
 
+.fadeSlow-enter-active, .fadeSlow-leave-active {
+  transition: opacity .3s;
+}
+
+.fadeSlow-enter, .fadeSlow-leave-to /* .fade-leave-active below version 2.1.8 */ {
+opacity: 0;
+}
+
+
 
 .page-enter-active, .page-leave-active {
   transition: .3s ease-in-out;
@@ -20,17 +29,15 @@
   opacity:0;
 }
 
-
-
 .growAppear-enter-active, .growAppear-leave-active {
   transition: all .5s ease-in-out;
 }
 .growAppear-enter {
-  transform: translate(0, -100%) scale(.8, 0);
+  transform: translate(0, -100%);
   opacity:0;
 }
 
 .growAppear-leave-to{
-  transform: translate(0%, -100%) scale(.8, 0);
+  transform: translate(0%, -100%);
   opacity:0
 }
