--- a/assets/styles/flexStyle.css
+++ b/assets/styles/flexStyle.css
@@ -17,7 +17,7 @@
     display:flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap:wrap;
 }
 
@@ -27,7 +27,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    flex-wrap:wrap;
 }
 
 .flexRowCenter {
@@ -48,7 +47,7 @@
     display:flex;
     flex-direction: row;
     flex-wrap:wrap;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
 }
 
@@ -62,6 +61,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+}
+
+.flexColumnCenter {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .flexCenter {
