--- a/assets/styles/importsAndVariables.css
+++ b/assets/styles/importsAndVariables.css
@@ -1,12 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Neucha&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Rubik:wght@900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,900;1,400&display=swap');
 
 /* Reuseable Variables*/
 :root {
     /* --h1-font: 'Neucha', cursive; */
-    --h1-font: 'Rubik', sans-serif;
-    --h1-color: rgb(46, 45, 53);    
-    --site-color: rgb(255, 255, 255);
-    --plain-font: 'Lato', sans-serif;;
+    --h1-font: 'Rubik', sans-serif; /* Supports 300, 400, and 700 */
+    --font-color: rgb(46, 45, 53);    
+    --primary-color:rgb(0, 116, 124);
+    --plain-font: 'Lato', sans-serif; /* Supports 300, 400, and 900 */
 }
