--- a/assets/styles/defaultStyle.css
+++ b/assets/styles/defaultStyle.css
@@ -1,10 +1,3 @@
-.fa-icon {
-    width: auto;
-    height: 6vw; 
-    max-width: 100%;
-    max-height: 100%;
-  }
-
 html {
     scroll-behavior:smooth;
 }
@@ -23,16 +16,19 @@ body {
 }
 
 .hero {
-    width:85vw;
-    margin:20px auto;
-    padding:50px;
+    width:90vw;
+    margin:0 auto 10px auto;
     background:rgba(255,255,255,.98);
     box-shadow: 1px 1px 4px black;
     max-width:1400px;
 }
 
+.heroPadding {
+    padding:10px;
+}
+
 hr {
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .reveal {
