--- a/assets/styles/fontStyles.css
+++ b/assets/styles/fontStyles.css
@@ -1,22 +1,51 @@
+:root {
+    --h1-font: 'Rubik', sans-serif; /* Supports 300, 400, and 700 */
+    --font-color: rgb(46, 45, 53);    
+    --primary-color:rgb(0, 116, 124);
+    --visited-links:rgb(97, 97, 97);
+    --plain-font: 'Lato', sans-serif; /* Supports 300, 400, and 900 */
+}
+
 .thinFont {
     font-weight: 400;
 }
 
 .fa-icon {
-    font-size:2vw;
+    width: auto;
+    height: 6vw; 
+    max-width: 100%;
+    max-height: 100%;
 }
 
-h1, h2, h3, h4, h5  {
+h1 {
     font-family: var(--h1-font);
     color:var(--font-color);
     font-weight:700;
+    margin:8px 0px;
+    text-size-adjust:none;
+}
+
+h2, h3   {
+    font-family: var(--plain-font);
+    color:var(--font-color);
+    font-weight:900;
+    margin:5px 0px;
+    text-size-adjust:none;
+}
+
+h4, h5   {
+    font-family: var(--plain-font);
+    color:var(--font-color);
+    font-weight:400;
+    margin:2px 0px;
+    text-size-adjust:none;
 }
 
 h1 { font-size:6.5vw; }
 
-h2 { font-size: 3.5vw; }
+h2 { font-size: 5vw; }
 
-h3 { font-size: 3vw; }
+h3 { font-size: 4vw; }
 
 h4 { font-size: 2.5vw; }
 
@@ -25,35 +54,140 @@ h5 { font-size: 2vw; }
 p { 
     font-family: var(--plain-font);
     color: var(--font-color);
-    font-size: 1.5vw; 
+    font-size: 4vw; 
     font-weight:400;
+    text-size-adjust:none;
 }
 
 ul {
     font-family: var(--plain-font);
     margin:10px 0;
-    padding:0 20px;
+    padding:0 10px;
     text-indent: 10px;
 }
 
 li{
     font-family: var(--plain-font);
-    font-size: 1.5vw;
+    font-size: 4vw;
 }
 
 a, a:link {
     font-family: var(--plain-font);
     text-decoration:none;
+    font-size: 4vw; 
+    font-weight:400;
 }
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
+.fa-icon {
+    width: auto;
+    height: 6vw; 
+    max-width: 100%;
+    max-height: 100%;
+}
 
+h1 {
+    font-family: var(--h1-font);
+    color:var(--font-color);
+    font-weight:700;
+    margin:8px 0px;
+    text-size-adjust:none;
+}
+
+h2, h3   {
+    font-family: var(--plain-font);
+    color:var(--font-color);
+    font-weight:900;
+    margin:5px 0px;
+    text-size-adjust:none;
+}
+
+h4, h5   {
+    font-family: var(--plain-font);
+    color:var(--font-color);
+    font-weight:400;
+    margin:2px 0px;
+    text-size-adjust:none;
+}
+
+h1 { font-size:6.5vw; }
+
+h2 { font-size: 5vw; }
+
+h3 { font-size: 4vw; }
+
+h4 { font-size: 2.5vw; }
+
+h5 { font-size: 2vw; }
+
+p { 
+    font-family: var(--plain-font);
+    color: var(--font-color);
+    font-size: 4vw; 
+    font-weight:400;
+    text-size-adjust:none;
+}
+
+ul {
+    font-family: var(--plain-font);
+    margin:10px 0;
+    padding:0 10px;
+    text-indent: 10px;
+}
+
+li{
+    font-family: var(--plain-font);
+    font-size: 4vw;
+}
+
+a, a:link {
+    font-family: var(--plain-font);
+    text-decoration:none;
+    font-size: 4vw; 
+    font-weight:400;
+}
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-
+    .fa-icon {
+        height: 6vw; 
+    }
+    
+    h1 {
+        margin:8px 0px;
+    }
+    
+    h2, h3   {
+        margin:5px 0px;
+    }
+    
+    h4, h5   {
+        margin:2px 0px;
+    }
+    
+    h1 { font-size:5vw; }
+    
+    h2 { font-size: 4vw; }
+    
+    h3 { font-size: 3vw; }
+    
+    h4 { font-size: 2.5vw; }
+    
+    h5 { font-size: 2vw; }
+    
+    p { 
+        font-size: 3vw; 
+    }
+    
+    li{
+        font-size: 3vw;
+    }
+    
+    a, a:link {
+        font-size: 3vw;
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
