--- a/assets/styles/fontStyles.css
+++ b/assets/styles/fontStyles.css
@@ -134,6 +134,11 @@ ul {
     margin:10px 0;
     padding:0 10px;
     text-indent: 10px;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0;
 }
 
 li{
