--- a/assets/styles/defaultStyle.css
+++ b/assets/styles/defaultStyle.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-image: url('../imgs/portfolio-stack-mobile.png');
+    background-image: url('../imgs/portfolio-stack-mobile.jpg');
     background-position: center;
     background-size: cover;
     background-attachment:fixed;
