--- a/assets/styles/desktopStyle.css
+++ b/assets/styles/desktopStyle.css
@@ -8,7 +8,7 @@
     }
 
     body {
-        background-image: url('../imgs/portfolio-stack.png');
+        background-image: url('../imgs/portfolio-stack.jpg');
         background-position: center;
         background-size: cover;
         background-attachment:fixed;
